项目运行前jar基本检查，演示账号，

--- a/src/main/resources/vm/manage/logBack.vm
+++ b/src/main/resources/vm/manage/logBack.vm
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <td>控制台日志备份路径</td>
-            <td>$!logPath</td>
+            <td>$!logBackPath</td>
         </tr>
         </tbody>
     </table>
