--- a/src/main/resources/vm/manage/console.vm
+++ b/src/main/resources/vm/manage/console.vm
@@ -250,7 +250,9 @@
                 success: function (data) {
                     if (200 == data.code) {
                         $("#logSize").html(data.data);
+                        $("#resetLog").show();
                     } else {
+                        $("#resetLog").hide();
                         layer.msg(data.msg);
                     }
                 },
@@ -267,17 +269,23 @@
         });
 
         $("#resetLog").on('click', function () {
-            loadingAjax({
-                url: './log/resetLog',
-                data: {
-                    id: "$!projectInfo.id"
-                },
-                success: function (data) {
-                    layer.msg(data.msg);
-                    if (200 == data.code) {
-                        reqLogSize();
-                    }
-                },
+            layer.confirm("确定要清空当前控制台日志文件内容吗？", {
+                title: '系统提示'
+            }, function (index) {
+                layer.close(index);
+                loadingAjax({
+                    url: './log/resetLog',
+                    data: {
+                        id: "$!projectInfo.id"
+                    },
+                    success: function (data) {
+                        layer.msg(data.msg);
+                        if (200 == data.code) {
+                            // reqLogSize();
+                            $("#resetLog").hide();
+                        }
+                    },
+                });
             });
         });
 
