--- a/src/main/resources/vm/common/head.vm
+++ b/src/main/resources/vm/common/head.vm
@@ -100,7 +100,36 @@
         $.ajax(defData);
     }
 
+    ## 静默ajax
     function silentAjax(data) {
         loadingAjax(data, true);
+    }
+
+    ## 默认表格渲染
+    function tableRender(data) {
+        var done = data.done;
+        delete data.done;
+        //
+        const defData = {
+            even: true,
+            loading: true,
+            method: 'POST',
+            response: {
+                statusCode: 200
+            },
+            done: function (data) {
+                if (data.code == 800) {
+                ## 用户信息失效
+                    layer.msg(data.msg);
+                    setTimeout(function () {
+                        top.location.reload();
+                    }, 1500);
+                    return;
+                }
+                done && done(data);
+            }
+        };
+        $.extend(defData, data);
+        table.render(defData);
     }
 </script>
