--- a/src/main/resources/vm/user/list.vm
+++ b/src/main/resources/vm/user/list.vm
@@ -122,24 +122,17 @@
 <script type="text/javascript">
     function loadSuccess() {
 
-        table.render({
+        tableRender({
             id: 'tab_user',
             elem: '#tab_user',
             url: './getUserList',
-            // height: 'full-52',
-            method: 'POST',
-            even: true,
             cols: [[
                 {field: 'id', title: 'id'},
                 {field: 'name', title: '昵称'},
                 {field: 'manage', templet: "#manager_status", title: '是否是管理员'},
                 {field: 'parent', title: '创建人'},
                 {field: 'op', title: '操作', align: 'center', toolbar: '#bar_projects', fixed: 'right'}
-            ]],
-            loading: true,
-            response: {
-                statusCode: 200
-            }
+            ]]
         });
 
         // 编辑用户信息
