--- a/src/main/resources/vm/welcome.vm
+++ b/src/main/resources/vm/welcome.vm
@@ -80,14 +80,15 @@
             {field: 'pid', title: '进程id', sort: true, width: '6%'},
             {field: 'COMMAND', title: '进程名称'},
             {field: 'port', title: '端口', sort: true, width: '6%'},
-            {field: 'USER', title: '所有者', width: '8%'},
+            {field: 'USER', title: '所有者', width: '8%', sort: true},
+            {field: 'jpomName', title: '项目名称', width: '8%', sort: true},
             {field: 'RES', title: '物理内存', width: '8%', sort: true},
             {field: 'S', title: '进程状态', width: '8%', sort: true},
             {field: 'CPU', title: '占用CPU', width: '8%', sort: true},
             {field: 'MEM', title: '物理内存', width: '8%', sort: true},
             {field: 'TIME', title: '时间总计', sort: true},
             {field: 'PR', title: '优先级', width: '6%', sort: true},
-            {field: 'NI', title: 'nice值', width: '6%', sort: true},
+            // {field: 'NI', title: 'nice值', width: '6%', sort: true},
             {field: 'VIRT', title: '虚拟内存', width: '8%', sort: true},
             {field: 'SHR', title: '共享内存', width: '8%', sort: true},
         ]],
