--- a/src/main/resources/vm/manage/internal.vm
+++ b/src/main/resources/vm/manage/internal.vm
@@ -51,17 +51,17 @@
             #if($item)
             <tr>
                 <td>$!item.pid</td>
-                <td>$!item.COMMAND</td>
-                <td>$!item.USER</td>
-                <td>$!item.RES</td>
-                <td>$!item.S</td>
-                <td>$!item.CPU</td>
-                <td>$!item.MEM</td>
-                <td>$!item.TIME</td>
-                <td>$!item.PR</td>
-                <td>$!item.NI</td>
-                <td>$!item.VIRT</td>
-                <td>$!item.SHR</td>
+                <td>$!item.command</td>
+                <td>$!item.user</td>
+                <td>$!item.res</td>
+                <td>$!item.status</td>
+                <td>$!item.cpu</td>
+                <td>$!item.mem</td>
+                <td>$!item.time</td>
+                <td>$!item.pr</td>
+                <td>$!item.ni</td>
+                <td>$!item.virt</td>
+                <td>$!item.shr</td>
             </tr>
             #else
             <tr>
