--- a/src/main/resources/vm/welcome.vm
+++ b/src/main/resources/vm/welcome.vm
@@ -78,19 +78,19 @@
         elem: '#tab_monitor',
         cols: [[
             {field: 'pid', title: '进程id', sort: true, width: '6%'},
-            {field: 'COMMAND', title: '进程名称'},
+            {field: 'command', title: '进程名称'},
             {field: 'port', title: '端口', sort: true, width: '6%'},
-            {field: 'USER', title: '所有者', width: '8%', sort: true},
+            {field: 'user', title: '所有者', width: '8%', sort: true},
             {field: 'jpomName', title: '项目名称', width: '8%', sort: true},
-            {field: 'RES', title: '物理内存', width: '8%', sort: true},
-            {field: 'S', title: '进程状态', width: '8%', sort: true},
-            {field: 'CPU', title: '占用CPU', width: '8%', sort: true},
-            {field: 'MEM', title: '物理内存', width: '8%', sort: true},
-            {field: 'TIME', title: '时间总计', sort: true},
-            {field: 'PR', title: '优先级', width: '6%', sort: true},
+            {field: 'res', title: '物理内存', width: '8%', sort: true},
+            {field: 'status', title: '进程状态', width: '8%', sort: true},
+            {field: 'cpu', title: '占用CPU', width: '8%', sort: true},
+            {field: 'mem', title: '物理内存', width: '8%', sort: true},
+            {field: 'time', title: '时间总计', sort: true},
+            {field: 'pr', title: '优先级', width: '6%', sort: true},
             // {field: 'NI', title: 'nice值', width: '6%', sort: true},
-            {field: 'VIRT', title: '虚拟内存', width: '8%', sort: true},
-            {field: 'SHR', title: '共享内存', width: '8%', sort: true},
+            {field: 'virt', title: '虚拟内存', width: '8%', sort: true},
+            {field: 'shr', title: '共享内存', width: '8%', sort: true},
         ]],
         done: function (data) {
         }
@@ -199,11 +199,8 @@
         silentAjax({
             url: './getTop',
             success: function (data) {
-                if (200 == data.code) {
-                    if (data.data) {
-                        var top = JSON.parse(data.data);
-                        loadEcharts(top);
-                    }
+                if (200 == data.code && data.data) {
+                    loadEcharts(data.data);
                 } else {
                     layer.alert(data.msg);
                 }
